rke2/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitower
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: grafana.wizardtower.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.wizardtower.dev
      secretName: grafana-tls
